# sql-recommender

./: README.md  pyproject.toml
data/: companies.csv  financials.csv  industry_benchmarks.csv
notebooks/: 0_setup.ipynb  1_load_data.ipynb  2_cleaning.ipynb  3_analysis_ranking.ipynb
