[project]
name = "sql-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython-sql>=0.5.0",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]
